kubernetes/socks5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socks5-proxy-svc
  namespace: socks5-proxy
spec:
  type: ClusterIP
  selector:
    app: socks5-proxy
  ports:
  - port: 1080
    targetPort: 1080
    protocol: TCP
