kubernetes/socks5/ingress-route-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: socks5-tcp
  namespace: socks5-proxy
spec:
  entryPoints:
    - socks5
  routes:
    - match: HostSNI(`*`)
      services:
        - name: socks5-proxy-svc
          port: 1080
